Refactor engine architecture based on code review
- Decouple Engine from Domain by introducing SimulationRenderer and WorldListener.
- Replace instanceof-based scheduler with Phase-based ScheduledTask in GameLoop.
- Use VirtualThreadPerTaskExecutor for concurrency.
- Enforce immutability for state getters in Cell.
- Fix Future handling in GameLoop.
- Update tests for configuration injection and reduce run time.